--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "react-google-charts": "^3.0.15",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3"
+        "react-scripts": "3.4.3",
+        "reactstrap": "^8.6.0"
     },
     "scripts": {
         "start": "react-scripts start",
