--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "paises",
     "version": "0.1.0",
     "private": true,
-    "homepage": "/",
+    "homepage": "/projetos/paises/",
     "dependencies": {
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
