--- a/package.json
+++ b/package.json
@@ -2,22 +2,7 @@
     "name": "paises",
     "version": "0.1.0",
     "private": true,
-    "dependencies": {
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "axios": "^0.20.0",
-        "bootstrap": "^4.5.2",
-        "firebase": "^7.21.1",
-        "react": "^16.13.1",
-        "react-bootstrap": "^1.3.0",
-        "react-dom": "^16.13.1",
-        "react-google-charts": "^3.0.15",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
-        "reactstrap": "^8.6.0"
-    },
+    "homepage": "paises/",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
@@ -38,5 +23,20 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "dependencies": {
+        "axios": "^0.20.0",
+        "firebase": "^7.22.0",
+        "react": "^16.13.1",
+        "react-bootstrap": "^1.3.0",
+        "react-dom": "^16.13.1",
+        "react-google-charts": "^3.0.15",
+        "react-router-dom": "^5.2.0"
+    },
+    "devDependencies": {
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.0.4",
+        "@testing-library/user-event": "^12.1.6",
+        "react-scripts": "^3.4.3"
     }
 }
